# contexto-multilang

./: .gitignore  README.md  package.json  wrangler.jsonc
messages/: ain.json  en.json  ja.json  ko.json  zh-hant.json
project.inlang/: settings.json
src/: hooks.ts  worker-configuration.d.ts
src/lib/components/: game-page.svelte
src/lib/game/: types.ts  zh-game.ts
src/lib/i18n/: game-copy.ts
src/lib/mock/: chinese-contexto.ts
src/lib/server/: ain-game-data.ts  create-game-data.ts  game-registry.ts  ja-game-data.ts  ko-game-data.ts  zh-game-data.ts
src/lib/tokenizers/: ainu.ts
src/params/: game.ts
src/routes/: +page.svelte  +page.ts  layout.css
src/routes/[game=game]/: +page.svelte  +page.ts
src/routes/api/[game=game]/guess/: +server.ts
src/routes/api/[game=game]/puzzle/: +server.ts
src/routes/api/guess/: +server.ts
src/routes/api/puzzle/: +server.ts
tools/ain-vocab-pipeline/: README.md  pyproject.toml
tools/ain-vocab-pipeline/ain_vocab_pipeline/: build_game_index.py
tools/game-vocab-tools/: README.md  pyproject.toml
tools/game-vocab-tools/game_vocab_tools/: __init__.py  categorize_vocab.py  common.py  compare_models.py  inspect_neighbors.py  inspect_stats.py  refilter_playable.py
tools/ja-vocab-pipeline/: Cargo.toml  README.md
tools/ja-vocab-pipeline/src/: main.rs
tools/jawiki-lemma-counter/: Cargo.toml  README.md
tools/jawiki-lemma-counter/src/: main.rs
tools/ko-vocab-pipeline/: Cargo.toml  README.md
tools/ko-vocab-pipeline/src/: main.rs
tools/zh-vocab-pipeline/: Cargo.toml  README.md
tools/zh_pipeline/: README.md  main.py  pyproject.toml
tools/zh_pipeline/zh_pipeline/: __init__.py  ain_build_game_index.py  build_game_index.py  build_similarity.py  clean_wikicode.py  constants.py  download.py  download_stopwords.py  eval_neighbors.py  extract_dump.py  inspect_dump.py  inspect_game_vocab.py  ja_build_game_index.py  ja_constants.py  ja_download.py  ja_extract_dump.py  ja_segment_dump.py  ja_tokenizer.py  segment_dump.py  timing.py  xml_utils.py
tools/zhwiki-jieba-builder/: Cargo.toml  README.md
tools/zhwiki-jieba-builder/src/: main.rs
