[project]
name = "game-vocab-tools"
version = "0.1.0"
description = "Inspection utilities for generated game vocab artifacts"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2,<3",
    "sudachidict-core>=20260428",
    "sudachipy>=0.6.11",
]

[project.scripts]
game-vocab-stats = "game_vocab_tools.inspect_stats:main"
game-vocab-neighbors = "game_vocab_tools.inspect_neighbors:main"
game-vocab-compare = "game_vocab_tools.compare_models:main"
game-vocab-refilter-playable = "game_vocab_tools.refilter_playable:main"
game-vocab-categorize = "game_vocab_tools.categorize_vocab:main"

[tool.uv]
package = true
