[project]
name = "zh-pipeline"
version = "0.1.0"
description = "Chinese Wikimedia dump download and prototype tokenization pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alive-progress>=3.2.0,<4",
    "mwparserfromhell>=0.7.2,<0.8",
    "numpy>=2.2,<3",
    "opencc-python-reimplemented>=0.1.7,<0.2",
    "pynlpir>=0.6.1,<0.7",
    "regex>=2025.11.3,<2026",
    "scikit-learn>=1.6,<2",
    "scipy>=1.15,<2",
    "zstandard>=0.23.0,<0.24",
]

[project.scripts]
zh-download = "zh_pipeline.download:main"
zh-download-stopwords = "zh_pipeline.download_stopwords:main"
zh-inspect = "zh_pipeline.inspect_dump:main"
zh-extract = "zh_pipeline.extract_dump:main"
zh-segment = "zh_pipeline.segment_dump:main"
ain-build-game-index = "zh_pipeline.ain_build_game_index:main"
zh-build-similarity = "zh_pipeline.build_similarity:main"
zh-eval-neighbors = "zh_pipeline.eval_neighbors:main"
zh-build-game-index = "zh_pipeline.build_game_index:main"
inspect-game-vocab = "zh_pipeline.inspect_game_vocab:main"

[tool.uv]
package = true
